2007-11-01  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/parse.hh, parse.cc: Moved here from utils subdirectory.

	* music/configuration.hh, condiguration.cc
	(configuration::configuration, configuration::lookup,
	configuration::write_env,
	configuration::insert, configuration::color): New methods.

	* music/application_map.hh, application_map.cc: Moved to utils
	subdirectory.

	* Makefile.am (libmusic_la_SOURCES): Removed
	music/application_map.hh, application_map.cc; Added
	music/parse.hh, parse.cc.

	* music/setup.hh, setup.cc: Rewritten.

2007-10-26  Örjan Ekeberg  <orjan@nada.kth.se>

	* runtime.cc, music/runtime.hh: Use type Intracomm for communicator.

2007-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am: Added configuration.cc, music/configuration.hh,
	application_map.cc music/application_map.hh.

	* application_map.cc, music/application_map.hh: New files.

	* configuration.cc, music/configuration.hh: New files.

2007-10-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/setup.hh, setup.cc (setup::config_string): Renamed from
	config_get_string.
	(setup::config_int): Renamed from config_get_int.
	(setup::config_double): Renamed from config_get_double.

2007-10-19  Örjan Ekeberg  <orjan@nada.kth.se>

	* music/runtime.hh, runtime.cc, music/setup.hh, setup.cc:
	Replace C MPI calls to their equivalent C++ versions.

2007-10-19  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/setup.hh, setup.cc (setup::config_get_string,
	setup::config_get_int, setup::config_get_double, setup::is_port,
	setup::port_size): New methods.

	* array_data.cc, music/array_data.hh: Renamed from arraydata.cc,
	music/arraydata.hh.

	* linear_index.cc, music/linear_index.hh: Renamed from
	linearindex.cc, music/linearindex.hh.

	* arraydata.cc, linearindex.cc, music/arraydata.hh,
	music/linearindex.hh, music/setup.hh (array_data, linear_index):
	Renamed from arraydata and linearindex everywhere.

	* Makefile.am (libmusic_la_SOURCES): Added linear_index.cc,